* Enhanced Robocode example a lot
* Added custom-initialization mechanism for GP
* Fixed bug with allTimeBest and cloning (see bug 1744077)
* Made INodeValidator serializable
* Enhanced IGPChromosome by method getFunctionSet()
* Added Java command version to NOP
* Enhanced Javadoc a lot
* Fixed bug with GABreeder.evolution (bug 1748528)
* Added two utility functions to SystemKit

3.2
-----------------------------------------------------------
* Ported JGAP from Java 1.4 to Java 5
* Enhanced architecture BaseChromosome, Chromosome a lot
* Introduced breeder (interface IBreeder, base class
  BreederBase, class GABreeder) to simplify evolution
  outside/without Genotype --> grid
* Enhanced grid logic a lot
* Enhanced GP program generation a lot (a low "max nodes"
  parameter does not lead to program abortion any more;
  auto-consider NOP if necessary for creating valid
  programs...)
* Enhanced evolution loop
* Improved speed of UTF-8 encoding
* Unified character encoding and decoding
* Introduced CachedFitnessFunction
* Enabled GPConfiguration for grid computing
* Better ADF support in Genetic Programming
* Added GP function ExchangeMemory and others
* Added GP program caching to speedup evolution
* Added GP TournamentSelector (by Javier and Enrique)
* Added complex Robocode example (thanx to Javier and
  Enrique)
* Removed static attribute from get/setGPConfiguration
  in class GPGenotype
* Added matrixed memory to class Culture
* Added contains method to class Culture
* Added concrete getName() to functions and terminals
* Added example with distributed fitness computation
* Introduced grid classes IEvolveStrategy and
  DefaultEvolveStrategy
* Made IGPProgram cloneable --> please consider when
  upgrading your code
* Made WeightedRouletteSelector serializable
* Made BestChromosomesSelector cloneable
* Changed configuration to avoid using unmodifyable
  collection for genetic operators (as it is not cloneable)