@@ -79,21 +79,7 @@
       <p class="text" align="center"><a target="_blank" href="http://www.amazon.de/exec/obidos/ASIN/3935042760/ref=ase_jgapjavagenet-21/302-0140503-8672069"><img border="0" src="bookcover2small.JPG" width="168" height="250"></a></p>
       <p>&nbsp;</p>
 </td>
-    <td width="60%" valign="left"><h4 class="header">Please vote for JGAP</h4>
-      <p class="text">Sourceforge allows you to vote for the open-source project of
-      your
-      choice. Please try the great user support of JGAP and vote for JGAP in the
-      category &quot;Best User Support&quot; here:</p>
-      <p class="text"><a href="http://sourceforge.net/awards/cca/nomination.php?group_id=11618&amp;from=http%3A%2F%2Fsourceforge.net%2Fprojects%2Fjgap%2F" target="_blank">To
-      the vote</a></p>
-      <p class="text">With your vote, you honor our strong engagement and
-      commitment and support us to deliver completely free convenient user
-      services in the future! Thank you!</p>
-      <p class="text">If you are not convinced, don't hesitate contacting us in
-      case of any questions, feedback or other suggestions regarding JGAP. You
-      may also take a look at the extensive Javadoc provided with JGAP as well
-      as the many examples and over 1300 unit tests you won't easily find in other open-source
-      projects!</p>
+    <td width="60%" valign="left">
       <h4 class="header">WHAT IS JGAP?</h4>
       <p class="text">JGAP (pronounced &quot;jay-gap&quot;) is a Genetic Algorithms
       and Genetic Programming component provided as a Java framework. It provides basic genetic mechanisms that can be
@@ -106,7 +92,7 @@
     other sub-components. </p>
       <p class="text">Documentation,&nbsp; quality and stability of code are the
       top concerns when developing JGAP. You find really <b>many unit tests </b>packaged
-      with JGAP, extensive Javadocs, and quite a lot of examples. Compare JGAP
+      with JGAP (&gt; 1300), extensive Javadocs, and quite a lot of examples. Compare JGAP
       with other projects! Feedback is always welcome. </p>
       <table border="0" width="100%" cellspacing="10">
         <tr>
@@ -135,7 +121,7 @@
     Algorithms, Genetic Programming and
     how to use JGAP. </p>
     <h4 class="header">WHERE DO I GET THE LATEST VERSION?</h4>
-      <p class="text"><b>The latest release of JGAP is version 3.</b>2, result of many years of personal investment and dedication to Genetic Algorithms and
+      <p class="text"><b>The latest release of JGAP is version 3.2.1</b>, result of many years of personal investment and dedication to Genetic Algorithms and
     Genetic Programming. A big thank you to all contributors, may it be developers
       or users giving feedback! In the CVS you very often find updated and
       enhanced code before a new release is published. Be aware that JGAP is a
